# robot_arm

./: CMakeLists.txt  README.md  package.xml  raw arm design.f3d  raw.xacro
arm_control/: arm_control.xml
arm_control/controller/: armbot_controller.cpp
arm_description/: package.xml  setup.cfg  setup.py
arm_description/config/: arm_controller.yaml  display.rviz
arm_description/launch/: display.launch.py  gazebo.launch.py
arm_description/meshes/: arm_plate_v2_1.stl  base_link.stl  bearing_holder_elbow_v3_1.stl  elbow_joint_axes_v5_1.stl  elbow_pipe_holder_front_v1_1.stl  elbow_pipe_holder_rear_v1_1.stl  elbow_side_plate_v3_1.stl  end_effector_v1_1.stl  hand_joint_mount_plate_v3_1.stl  hand_joint_side_plate_v4_1.stl  new_pipe_b_v8_1.stl  pipe_a_v3_1.stl  pipe_c_v1_1.stl  pipe_under_arm_v2_1.stl  plangearbox1_v2_1.stl  pulley_2_v1_1.stl  pulley_3_v1_1.stl  pulley_4_v1_1.stl  pulley_5_v1_1.stl  pulley_6_v1_1.stl  pulley_a_v1_1.stl  pulley_b_v2_1.stl  pulley_c2_v1_1.stl  pulley_c3_v1_1.stl  pulley_c_v9_1.stl  shoulder_bearling_house2_prt2_v10_1.stl  shoulder_bearling_house2_prt3_v3_1.stl  shoulder_bearling_house_2prt1_v5_1.stl  shoulder_bearling_house_prt1_v14_1.stl  shoulder_bearling_house_prt2_v1_1.stl  shoulder_bearling_house_prt3_v2_1.stl  shoulder_v2_1.stl  stepper1_v2_1.stl  stepper_motor1_v3_1.stl  stepper_motor2_v1_1.stl  stepper_motor3_v1_1.stl  stepper_motor4_v1_1.stl  stepper_motor6_v1_1.stl  table1_v2_1.stl  table2_v1_1.stl  (+5 more)
arm_description/urdf/: arm.gazebo  arm.trans  arm.urdf.xacro  arm.xacro  gazebo_control.xacro  materials.xacro  ros2_control.xacro
arm_moveit/: CMakeLists.txt  package.xml  setup_assistant
arm_moveit/config/: arm.srdf  arm.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
arm_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  gazebo.launch.py  rviz.launch.py
meshes/: base_link.stl  elbow_link_1.stl  elbow_link__1__1.stl  finger_link_1.stl  hand_link_1.stl  tump_link_1.stl  under_arm_link_1.stl  under_arm_link__1__1.stl  upper_arm_link_1.stl  upper_arm_link__1__1.stl  wrist_link_1.stl  wrist_link__1__1.stl
moveit/: CMakeLists.txt  package.xml
moveit/arm_control/: CMakeLists.txt  package.xml
moveit/arm_control/bringup/config/: armbot_controller.yaml
moveit/arm_control/bringup/launch/: send_trajectory.launch.py
moveit/arm_control/hardware/: armbot_hardware.cpp
moveit/config/: arm.ros2_control.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  robot_arm.ros2_control.xacro  robot_arm.srdf  robot_arm.urdf.xacro  ros2_controllers.yaml
moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
robot_arm_controllers_test/: package.xml  setup.cfg  setup.py
robot_arm_controllers_test/robot_arm_controllers_test/: controller_test.py
robot_arm_description/: CMakeLists.txt  package.xml
robot_arm_description/config/: controller.yaml  controller_configuration.yaml
robot_arm_description/launch/: control.launch.py  display.launch.py  (+3 more)
robot_arm_trajectory_sender/: package.xml  setup.cfg  setup.py
urdf/: materials.xacro  raw.gazebo  raw.trans  raw.xacro  robot_arm.gazebo  robot_arm.trans  robot_arm.xacro
(+45 files in other folders)
