<?xml version="1.0"?>
<package format="2">
  <name>robot_arm_description</name>
  <version>0.0.0</version>
<description>The robot_arm_description package</description>
  <maintainer email="bvdhaagen@todo.todo">bvdhaagen</maintainer>

  <maintainer email="nilutpolkashyap@todo.todo">nilutpolkashyap</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>

  </export>
</package>
